modificamos index y agregamos gitignore

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col ">
+							<div class="col">
 								<a href="#"><img src="img/icon-colors/be.png"  width="50" alt=""></a>
 								<a href="#"><img src="img/icon-colors/pinterest.png" width="41" alt=""></a>
 								<a href="#"><img src="img/icon-colors/lin.png" width="50" alt=""></a>
@@ -117,8 +117,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6">
-					<!-- <img src="img/bruma.png" width="300" class="" alt=""> -->
+				<div class="col-6"
 					<img src="img/silueta.png" width="400" class="float-right " alt="">
 				</div>
 			</div>
