--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-6"
+				<div class="col-6"></div>
 					<img src="img/silueta.png" width="400" class="float-right " alt="">
 				</div>
 			</div>
